--- a/cotizador_acerta/templates/administrador/sexo_form.html
+++ b/cotizador_acerta/templates/administrador/sexo_form.html
@@ -31,7 +31,7 @@
             </div><!-- /.box-header -->
             {% bootstrap_form_errors form %}
             <!-- form start -->
-            <form action="" method="POST" role="form" class="form-horizontal">
+            <form id="form" action="" method="POST" role="form" class="form-horizontal">
 
               <div class="box-body">
                 {% csrf_token %}
@@ -51,3 +51,12 @@
 </div>
 
 {% endblock content %}
+
+{% block custom_script %}
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("#id_prev").val($("#id_factor").val());
+    $("#id_user").val({{ request.user.pk }});
+  });
+</script>
+{% endblock custom_script %}
