--- a/cotizador_acerta/templates/reportes/cotizacion_details.html
+++ b/cotizador_acerta/templates/reportes/cotizacion_details.html
@@ -200,9 +200,13 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="pull-left">
-              <a class="btn btn-lg calculate" href="{% url 'volver-vehiculo' cotizacion.conductor.pk cotizacion.pk %}"><span class="fa  fa-pencil"></span> Editar</a>
-            </div>
+            {% if cotizacion.status != 'Aprobada' %}
+            {% if cotizacion.status == 'Rechazada' %}
+              <div class="pull-left">
+                <a class="btn btn-lg calculate" href="{% url 'volver-vehiculo' cotizacion.conductor.pk cotizacion.pk %}"><span class="fa  fa-pencil"></span> Editar</a>
+              </div>
+            {% endif %}
+            {% endif %}
             <div class="pull-right">
               {% if cotizacion.corredor.pk == active_user.pk %}
                   <a class="btn btn-lg calculate" href="{% url 'send' cotizacion.pk %}">Enviar</a>
