--- a/cotizador_acerta/templates/administrador/dashboard.html
+++ b/cotizador_acerta/templates/administrador/dashboard.html
@@ -164,6 +164,17 @@
                 </a>
               </div><!-- /.info-box -->
             </div><!-- /.col -->
+            <div class="col-md-3 col-sm-6 col-xs-12">
+              <div class="info-box">
+                <a href="{% url 'list_valor' %}">
+                    <span class="info-box-icon bg-red"><i class="fa fa-usd"></i></span>
+                    <div class="info-box-content">
+                      <span class="info-box-text" style="color: black;">Valor de<br>Vehículo</span>
+                      <!-- <span class="info-box-number">90<small>%</small></span> -->
+                    </div><!-- /.info-box-content -->
+                </a>
+              </div><!-- /.info-box -->
+            </div><!-- /.col -->
 
           </div><!-- /.row -->
 
