--- a/cotizador_acerta/templates/administrador/list_sexo_history.html
+++ b/cotizador_acerta/templates/administrador/list_sexo_history.html
@@ -2,7 +2,7 @@
 
 {% block titulo %}
     <h1>
-        Historial Sexo: <strong>{{ histories.0.prev_value.sexo }}</strong>
+        Historial Sexo: <strong>{{ sexo.sexo }}</strong>
     </h1>
 {% endblock titulo %}
 {% load static %}
