--- a/cotizador_acerta/templates/administrador/importacion_form.html
+++ b/cotizador_acerta/templates/administrador/importacion_form.html
@@ -39,8 +39,10 @@
               </div><!-- /.box-body -->
 
               <div class="box-footer text-center">
-                <a href="{% url 'list_importacion' %}" class="btn btn-danger">Cancelar</a>
-                {% buttons submit='Actualizar' %}{% endbuttons %}
+                <div class="form-group">
+                  <a href="{% url 'list_importacion' %}" class="btn btn-danger" type="reset">Cancelar</a>
+                  <button class="btn btn-primary" type="submit">Actualizar</button>
+                </div>
               </div>
             </form>
           </div><!-- /.box -->
@@ -49,3 +51,12 @@
 </div>
 
 {% endblock content %}
+
+{% block custom_script %}
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("#id_prev").val($("#id_factor").val());
+    $("#id_user").val({{ request.user.pk }});
+  });
+</script>
+{% endblock custom_script %}
