--- a/cotizador_acerta/templates/administrador/modelo_form.html
+++ b/cotizador_acerta/templates/administrador/modelo_form.html
@@ -51,3 +51,15 @@
 </div>
 
 {% endblock content %}
+
+{% block custom_script %}
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("#id_marca_n").val("{{ modelo.marca.nombre }}");
+    $("#id_modelo").val($("#id_nombre").val());
+    $("#id_prev_d").val($("#id_descuento").val());
+    $("#id_prev_r").val($("#id_recargo").val());
+    $("#id_user").val({{ request.user.pk }});
+  });
+</script>
+{% endblock custom_script %}
