--- a/cotizador_acerta/templates/administrador/valor_form.html
+++ b/cotizador_acerta/templates/administrador/valor_form.html
@@ -51,3 +51,14 @@
 </div>
 
 {% endblock content %}
+
+{% block custom_script %}
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("#id_prev").val($("#id_factor").val());
+    $("#id_prev_i").val($("#id_inferior").val());
+    $("#id_prev_s").val($("#id_superior").val());
+    $("#id_user").val({{ request.user.pk }});
+  });
+</script>
+{% endblock custom_script %}
