--- a/cotizador_acerta/templates/reportes/corredor_vendedor_list.html
+++ b/cotizador_acerta/templates/reportes/corredor_vendedor_list.html
@@ -62,14 +62,13 @@
 			<div class="box-body">
 			  <table id="example2" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
 			    <thead>
-			    <tr role="row">
-				    <th>Razón Social</th>
-				    <th>Nombre</th>
-				    <th>Apellido</th>
-				    <th>Correo</th>
-				    <th>Licencia</th>
-				    <th>Detalles</th>
-			    </tr>
+				    <tr role="row">
+					    <th>Nombre</th>
+					    <th>Apellido</th>
+					    <th>Correo</th>
+					    <th>Corredor</th>
+					    <th>Detalles</th>
+				    </tr>
 			    </thead>
 			    <tbody>
 			    {% for user in vendedores %}
@@ -80,10 +79,16 @@
 				      <td>{{ user.corredor.first_name }} {{ user.corredor.last_name }}</td>
 				      <td><a href="{% url 'corredor_vendedor_detail' user.vendedor.pk %}">Ver</a></td>
 				    </tr>
-			    {% endfor %}</tbody>
+			    {% endfor %}
+			    </tbody>
 			    <tfoot>
-			    <tr><th rowspan="1" colspan="1">Nombre</th><th rowspan="1" colspan="1">Apellido</th><th rowspan="1" colspan="1">Correo</th><th rowspan="1" colspan="1">Corredor Asociado</th><th rowspan="1" colspan="1">Detalles</th>
-			    </tr>
+				    <tr role="row">
+					    <th>Nombre</th>
+					    <th>Apellido</th>
+					    <th>Correo</th>
+					    <th>Corredor</th>
+					    <th>Detalles</th>
+				    </tr>
 			    </tfoot>
 			  </table>
 			</div>
