historial de factores

--- a/cotizador_acerta/templates/administrador/list_endoso.html
+++ b/cotizador_acerta/templates/administrador/list_endoso.html
@@ -30,7 +30,7 @@
             <tr>
               <th>Endoso</th>
               <th>Precio</th>
-              <th>Información</th>
+              <th class="hidden-xs hidden-md">Información</th>
               <th>Ver Historial</th>
             </tr>
           </thead>
@@ -39,7 +39,7 @@
                 <tr>
                     <td><a href="{% url 'admin_endoso' endoso.pk %}">{{ endoso.endoso }}</a></td>
                     <td>{{ endoso.precio|floatformat:2 }}</td>
-                    <td><a href="{% url 'show_pdf' endoso.pk %}">{{ endoso.archivo.name }}</a></td>
+                    <td class="hidden-xs hidden-md"><a href="{% url 'show_pdf' endoso.pk %}">{{ endoso.archivo.name }}</a></td>
                     <td><a href="{% url 'list_endoso_history' endoso.pk %}">Modificaciones</a></td>
                 </tr>
             {% endfor %}
@@ -48,7 +48,7 @@
             <tr>
               <th>Endoso</th>
               <th>Precio</th>
-              <th>Información</th>
+              <th class="hidden-xs hidden-md">Información</th>
               <th>Ver Historial</th>
             </tr>
           </tfoot>
