--- a/cotizador_acerta/templates/reportes/reporte_success.html
+++ b/cotizador_acerta/templates/reportes/reporte_success.html
@@ -36,9 +36,6 @@
     input:focus:-ms-input-placeholder {
         color: #E76C42 !important;
     }
-    .form-field {
-        padding:0px 10px 0px 10px;
-    }
     .login-box-body {
         margin-left: 20%;
         margin-right: 20%
@@ -69,33 +66,13 @@
             <div class="col-xs-12 col-sm-12 col-md-8">
                 <div class="box box-danger">
                     <div class="box-header with-border">
-                        <h1 id="titulo-login" class="text-center"><strong>ACTUALIZAR DATOS DE CORREDOR</strong></h1>
+                        <h1 id="titulo-login" class="text-center"><strong>REPORTE DE ERRORES</strong></h1>
                     </div>
                     <div class="box-body">
                         <div class="col-md-1"></div>
-                        <div class="col-md-10">
-                            <div class="hidden">
-                                {% bootstrap_form_errors form %}
-                            </div>
-                            <form action="" method="post" role="form" class="form-horizontal">
-                                {% csrf_token %}
-                            {% bootstrap_field form.razon_social show_label=False field_class='form-field' %}
-                            {% bootstrap_field form.first_name show_label=False field_class='form-field' %}
-                            {% bootstrap_field form.last_name show_label=False field_class='form-field' %}
-                            {% bootstrap_field form.ruc show_label=False field_class='form-field' %}
-                            {% bootstrap_field form.licencia show_label=False field_class='form-field' %}
-                            {% bootstrap_field form.email show_label=False field_class='form-field' %}
-
-                                {% buttons %}
-                                    <div class="col-md-3"></div>
-                                    <div class="col-sm-4 col-md-6 text-center">
-                                        <button id="id_submit" type="submit" class="btn btn-lg calculate">
-                                            Actualizar
-                                        </button>
-                                    </div>
-                                    <div class="col-md-3"></div>
-                                {% endbuttons %}
-                            </form>
+                        <div class="col-md-10 text-center">
+                            <h2>Se ha enviado su reporte satisfactoriamente.</h2>
+                            <h2>Gracias por ayudarnos a mejorar.</h2>
                         </div>
                         <div class="col-md-1"></div>
                     </div><!-- /.box-body -->
@@ -107,7 +84,6 @@
 </div>
 
 {% endblock content %}
+
 {% block custom_script %}
 {% endblock custom_script %}
-
-
