arreglos de responsive

--- a/cotizador_acerta/templates/administrador/list_endoso_history.html
+++ b/cotizador_acerta/templates/administrador/list_endoso_history.html
@@ -24,13 +24,13 @@
   <div class="col-md-1 col-sm-hidden col-xs-hidden"></div>
   <div class="col-xs-12 col-sm-12 col-md-10">
     <div class="box box-default color-palette-box">
-      <div class="box-body">
+      <div class="box-body table-responsive no-padding">
         <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
           <thead>
             <tr>
               <th>Endoso</th>
               <th>Precio</th>
-              <th class="hidden-xs hidden-sm">Información</th>
+              <th>Información</th>
               <th>Usuario</th>
               <th>Fecha de modificación</th>
             </tr>
@@ -40,7 +40,7 @@
                 <tr>
                     <td>{{ history.endoso }}</td>
                     <td>{{ history.precio|floatformat:2|intcomma }}</td>
-                    <td class="hidden-xs hidden-md"><a href="{% url 'show_pdf_history' history.pk %}">{{ history.archivo }}</a></td>
+                    <td><a href="{% url 'show_pdf_history' history.pk %}">{{ history.archivo }}</a></td>
                     <td>{{ history.user.email }}</td>
                     <td>{{ history.modified_at|date:'D, d N Y' }}</td>
                 </tr>
@@ -50,7 +50,7 @@
             <tr>
               <th>Endoso</th>
               <th>Precio</th>
-              <th class="hidden-xs hidden-md">Información</th>
+              <th>Información</th>
               <th>Usuario</th>
               <th>Fecha de modificación</th>
             </tr>
