--- a/cotizador_acerta/templates/administrador/list_marca.html
+++ b/cotizador_acerta/templates/administrador/list_marca.html
@@ -24,7 +24,7 @@
   <div class="col-md-1 col-sm-hidden col-xs-hidden"></div>
   <div class="col-xs-12 col-sm-12 col-md-10">
     <div class="box box-default color-palette-box">
-      <div class="box-body">
+      <div class="box-body table-responsive no-padding">
         <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
           <thead>
             <tr>
