--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
@@ -4,6 +4,9 @@
 
 {% block extracss %}
 <style type="text/css">
+    .panel-heading {
+        height: auto !important;
+    }
     #titulo {
         font-family: Arial;
         font-size: 29px;
@@ -90,7 +93,7 @@
     <div class="col-md-2" style="padding-top: 10%"></div>
 </div>
 <div class="row">
-    <div class="col-md-3 col-xs-2">        
+    <div class="col-md-3 col-xs-2">
     </div>
     <div class="col-md-3 col-xs-8">
         <div class="panel panel-default">
