--- a/cotizador_acerta/templates/reportes/corredor_vendedor_list.html
+++ b/cotizador_acerta/templates/reportes/corredor_vendedor_list.html
@@ -21,7 +21,7 @@
 			<div class="box-header">
 				<h3 class="box-title"> Corredores ACERTA</h3>
 			</div>
-			<div class="box-body">
+			<div class="box-body table-responsive no-padding">
 			  <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
 			    <thead>
 			    <tr role="row">
@@ -59,7 +59,7 @@
 			<div class="box-header">
 				<h3 class="box-title"> Vendedores ACERTA</h3>
 			</div>
-			<div class="box-body">
+			<div class="box-body table-responsive no-padding">
 			  <table id="example2" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
 			    <thead>
 				    <tr role="row">
