--- a/cotizador_acerta/templates/administrador/list_endoso.html
+++ b/cotizador_acerta/templates/administrador/list_endoso.html
@@ -24,13 +24,13 @@
   <div class="col-md-2 col-sm-hidden col-xs-hidden"></div>
   <div class="col-xs-12 col-sm-12 col-md-8">
     <div class="box box-default color-palette-box">
-      <div class="box-body">
+      <div class="box-body table-responsive no-padding">
         <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
           <thead>
             <tr>
               <th>Endoso</th>
               <th>Precio</th>
-              <th class="hidden-xs hidden-md">Información</th>
+              <th>Información</th>
               <th>Ver Historial</th>
             </tr>
           </thead>
@@ -39,7 +39,7 @@
                 <tr>
                     <td><a href="{% url 'admin_endoso' endoso.pk %}">{{ endoso.endoso }}</a></td>
                     <td>{{ endoso.precio|floatformat:2 }}</td>
-                    <td class="hidden-xs hidden-md"><a href="{% url 'show_pdf' endoso.pk %}">{{ endoso.archivo.name }}</a></td>
+                    <td><a href="{% url 'show_pdf' endoso.pk %}">{{ endoso.archivo.name }}</a></td>
                     <td><a href="{% url 'list_endoso_history' endoso.pk %}">Modificaciones</a></td>
                 </tr>
             {% endfor %}
@@ -48,7 +48,7 @@
             <tr>
               <th>Endoso</th>
               <th>Precio</th>
-              <th class="hidden-xs hidden-md">Información</th>
+              <th>Información</th>
               <th>Ver Historial</th>
             </tr>
           </tfoot>
