--- a/cotizador_acerta/templates/reportes/corredor_detail.html
+++ b/cotizador_acerta/templates/reportes/corredor_detail.html
@@ -48,7 +48,7 @@
 			<div class="box-header">
 				<h3 class="box-title"> Cotizaciones</h3>
 			</div>
-			<div class="box-body">
+			<div class="box-body table-responsive no-padding">
 			  <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
 			    <thead>
 			    <tr role="row">
