--- a/cotizador_acerta/templates/reportes/cotizaciones_list.html
+++ b/cotizador_acerta/templates/reportes/cotizaciones_list.html
@@ -22,7 +22,7 @@
 			<div class="box-header">
 				<h3 class="box-title">Mis Cotizaciones</h3>
 			</div>
-			<div class="box-body">
+			<div class="box-body table-responsive no-padding">
 			  <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
 			    <thead>
 				    <tr>
