--- a/cotizador_acerta/templates/reportes/cotizador_general_detail.html
+++ b/cotizador_acerta/templates/reportes/cotizador_general_detail.html
@@ -100,7 +100,7 @@
             <h3 class="box-title">Cotizaciones</h3>
         {% endif %}
       </div>
-      <div class="box-body">
+      <div class="box-body table-responsive no-padding">
         <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
           <thead>
             <tr>
