--- a/cotizador_acerta/templates/reportes/cotizador_specific_detail.html
+++ b/cotizador_acerta/templates/reportes/cotizador_specific_detail.html
@@ -110,7 +110,7 @@
           {% endif %}
         {% endif %}
       </div>
-      <div class="box-body">
+      <div class="box-body table-responsive no-padding">
         <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
           <thead>
             <tr>
