--- a/cotizador_acerta/templates/reportes/dashboard.html
+++ b/cotizador_acerta/templates/reportes/dashboard.html
@@ -158,7 +158,7 @@
 			<div class="box-header">
 				<h3 class="box-title"> Cotizaciones de Corredores ACERTA</h3>
 			</div>
-			<div class="box-body">
+			<div class="box-body table-responsive no-padding">
 			  <table id="example2" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
 			    <thead>
 			    <tr role="row">
