--- a/cotizador_acerta/templates/reportes/vendedor_list.html
+++ b/cotizador_acerta/templates/reportes/vendedor_list.html
@@ -21,7 +21,7 @@
             <div class="box-header">
             	<h3 class="box-title">Mis Vendedores</h3>
             </div><!-- /.box-header -->
-            <div class="box-body">
+            <div class="box-body table-responsive no-padding">
 				<table id="example1" class="table table-bordered table-striped">
 					<thead>
 						<tr>
