--- a/cotizador_acerta/static/css/footer.css
+++ b/cotizador_acerta/static/css/footer.css
@@ -1,5 +1,5 @@
 #footer {
-    position: fixed;
+    position: relative;
     bottom: 0%;
     width: 100%;
     padding: 10px;
@@ -11,7 +11,7 @@
 
 @media only screen and (max-width: 435px) {
     #footer {
-        position: fixed;
+        position: relative;
         bottom: 0%;
         width: 100%;
         padding: 10px;
