arreglos de responsive

--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -162,8 +162,8 @@
     <div class="col-xs-12 first">
         <div class="row">
             <div class="col-md-12">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 text-center">
+                <div class="col-md-2 hidden-xs hidden-sm"></div>
+                <div class="col-md-8 col-xs-12 col-sm-12 text-center">
                     <h1 id="titulo-login" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVILES</strong></h1>
                     <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
                     <img src="{% static 'img/1-2-3_cotizador_acerta_1.png' %}" class="col-xs-12 hidden-sm hidden-md hidden-lg">
@@ -171,11 +171,11 @@
                     <h3 id="subtitulo2" class="text-center"><strong>INGRESA TODOS LOS DATOS</strong></h3>
                 </div>
 
-                <div class="col-md-2"></div>
+                <div class="col-md-2 hidden-xs hidden-sm"></div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 hidden-xs hidden-sm">
             </div>
-            <div class="col-md-8" style="position: relative;">
+            <div class="col-md-8 col-xs-12 col-sm-12" style="position: relative;">
                 <img src="{% static 'img/melissa_acerta_300x130_2.png' %}" style="position: absolute; float: left; z-index: -1; top: 520px; left: 20px;" class="hidden-xs hidden-sm">
                 <img src="{% static 'img/carro_acerta_300x130.png' %}" width="250" style="position: absolute; float: left; z-index: -2; top: 680px; left:-40px;" class="hidden-xs hidden-sm">
                 {% bootstrap_form_errors form %}
@@ -224,7 +224,7 @@
                     </div><!-- /.login-box-body -->
                 </form>
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-md-2 hidden-xs hidden-sm"></div>
         </div>
     </div>
 </div>
