arreglos de responsive

--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -153,6 +153,10 @@
         height: 100%;
         vertical-align: bottom;
     }
+    .col-xs-12 #myform .login-box-body {
+        margin-left: 0% !important;
+        margin-right: 0% !important;
+    }
 </style>
 {% endblock extracss %}
 
