--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -112,7 +112,7 @@
       color: #FFFFFF;
     }
     .first {
-        padding-top: 10%;
+        padding-top: 0%;
     }
     #id_endoso{
         z-index: 0;
@@ -122,7 +122,7 @@
     }
     @media only screen and (max-width: 435px) {
         .first {
-          padding-top: 20%;
+          padding-top: 0%;
         }
     }
     table th {
@@ -156,6 +156,10 @@
     .col-xs-12 #myform .login-box-body {
         margin-left: 0% !important;
         margin-right: 0% !important;
+    }
+    .col-md-8 #myform .login-box-body {
+        margin-left: 20% !important;
+        margin-right: 20% !important;
     }
 </style>
 {% endblock extracss %}
