--- a/cotizador_acerta/templates/login.html
+++ b/cotizador_acerta/templates/login.html
@@ -71,6 +71,9 @@
     img.melissa {
         float: right;
     }
+    #footer {
+        position: fixed !important;
+    }
 </style>
 
 {% endblock extracss %}
